# Graphenium

./: .gitattributes  .gitignore  .gitignore.bak  .grapheniumignore  AI_SETUP.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MANIFEST.md  README.md  SECURITY.md  install.ps1  install.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
.graphenium/: policy.json
contrib/harness-adapter/: Cargo.toml  README.md
contrib/harness-adapter/src/: lib.rs
docs/: AGENT_WORKFLOWS.md  AI_SETUP.md  ARCHITECTURE.md  BENCHMARKING.md  CHANGELOG.md  CI_AND_GOVERNANCE.md  CODE_OF_CONDUCT.md  COMMAND_REFERENCE.md  COMPARISON.md  CONTRIBUTING.md  DEMO_SCRIPT.md  DOCUMENTATION_MAP.md  GETTING_STARTED.md  GRAPH_REPORT.md  HARNESS_ADAPTER.md  LICENSE.md  MCP_TOOLS.md  POSITIONING.md  SECURITY.md  TRUST_MODEL.md  WORKED_EXAMPLES.md  demo.cast
graphenium-out/: GRAPH_REPORT.md
scripts/: bench.sh  benchmark_self.sh  demo.sh  graphenium-mcp  run_benchmarks.sh  verify_robustness.sh
skills/graphenium/: SKILL.md
src/: SUMMARY.md  build.rs  doctor.rs  embed.rs  error.rs  graph_integrity.rs  harness.rs  lib.rs  main.rs  policy.rs  ranking.rs  report.rs  resolver.rs  telemetry.rs  trust.rs  validate.rs  watch.rs
src/analyze/: delta.rs  diff.rs  god.rs  impact.rs  mod.rs  query.rs  questions.rs  rank.rs  surprise.rs  verifier.rs
src/analyze/query/: stdlib.dl
src/cache/: manager.rs  manifest.rs  mod.rs  query.rs  semantic_cache.rs
src/cluster/: cohesion.rs  drift.rs  focus.rs  louvain.rs  mod.rs  split.rs
src/detect/: classify.rs  corpus.rs  mod.rs  paper.rs  sensitive.rs
src/export/: html.rs  html_template.rs  json.rs  mod.rs
src/extract/: ci.rs  config.rs  cross_file.rs  csharp_project.rs  go.rs  import_handlers.rs  mod.rs  rust_lang.rs  walker.rs
src/model/: edge.rs  extraction.rs  graph.rs  hyperedge.rs  id.rs  mod.rs  node.rs
src/semantic/: client.rs  mod.rs  parse.rs  prompt.rs  provider.rs
src/serve/: freshness.rs  handlers.rs  mod.rs  tool_schema.rs  traversal.rs
tests/: datalog_stdlib_test.rs  planning_bench.rs  trust_bench.rs
tests/trust_bench/: README.md  benchmark_test.rs
worked/: README.md  TEMPLATE.md
worked/graphenium-self-analysis/: GRAPH_REPORT.md  README.md  graph.json  sample-queries.md
