[package]
name = "graphenium"
version = "0.1.0"
edition = "2021"
description = "Graphenium (gm) — the elemental knowledge graph engine for your codebase"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lambda-alpha-labs/Graphenium"
documentation = "https://github.com/lambda-alpha-labs/Graphenium"
readme = "README.md"

[[bin]]
name = "gm"
path = "src/main.rs"

# Feature flags: enable/disable language support to control binary size.
# All 9 languages are included by default.
[features]
default = [
    "lang-python",
    "lang-js",
    "lang-ts",
    "lang-rust",
    "lang-go",
    "lang-java",
    "lang-c",
    "lang-cpp",
    "lang-csharp",
]
# Core graph engine only — no MCP server or watch-mode dependencies.
# Use when embedding Graphenium as a library in a harness.
harness = []
lang-python = ["dep:tree-sitter-python"]
lang-js     = ["dep:tree-sitter-javascript"]
lang-ts     = ["dep:tree-sitter-typescript"]
lang-rust   = ["dep:tree-sitter-rust"]
lang-go     = ["dep:tree-sitter-go"]
lang-java   = ["dep:tree-sitter-java"]
lang-c      = ["dep:tree-sitter-c"]
lang-cpp    = ["dep:tree-sitter-cpp"]
lang-csharp = ["dep:tree-sitter-c-sharp"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Graph
petgraph = "0.6"

# File walking (respects .gitignore/.grapheniumignore)
ignore = "0.4"
globset = "0.4"

# Concurrency: rayon for CPU-bound AST, tokio for async LLM I/O
rayon = "1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
tokio-util = { version = "0.7", features = ["codec"] }

# HTTP client for Claude API calls
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# SHA256 hashing for cache keys
sha2 = "0.10"

# Error handling
thiserror = "1"
anyhow = "1"

# File watching (watch mode)
notify = "6"
notify-debouncer-mini = "0.4"

# AST parsing (Phase 3)
tree-sitter = "0.23"
tree-sitter-python     = { version = "0.23", optional = true }
tree-sitter-javascript = { version = "0.23", optional = true }
tree-sitter-typescript = { version = "0.23", optional = true }
tree-sitter-rust       = { version = "0.23", optional = true }
tree-sitter-go         = { version = "0.23", optional = true }
tree-sitter-java       = { version = "0.23", optional = true }
tree-sitter-c          = { version = "0.23", optional = true }
tree-sitter-cpp        = { version = "0.23", optional = true }
# NOTE: tree-sitter-c-sharp may be at a different version than the others.
# Adjust if `cargo check` reports a resolution error for this crate.
tree-sitter-c-sharp    = { version = "0.23", optional = true }

# MCP Server (Phase 11) — official Rust MCP SDK
# NOTE: Verify the latest version at https://crates.io/crates/rmcp
rmcp = { version = "0.1", features = ["server", "transport-io", "macros"] }

# Base64 encoding for image content blocks in LLM requests
base64 = "0.22"

# Regex (used in make_id and detection patterns)
regex = "1"

# Lazy static initialization for compiled regex sets
once_cell = "1"

# Hex encoding for SHA256 digests
hex = "0.4"

# Random number generation (used in Node2Vec random walks)
rand = "0.8"

# Lock-free atomic Arc swaps for the MCP server's hot-reloadable graph state.
arc-swap = "1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = true
strip = true
opt-level = 3
